I3UZC5: support jmap parallel inspection for cms gc